--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "cd server && yarn dev",
-    "start": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "start": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "dependencies": {
     "concurrently": "^3.6.0"
