--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "cd server && yarn dev",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "dev:server": "cd client && yarn build && cd .. && yarn start",
     "start": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
