--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "cd server && node app.js",
+    "start": "node server/app.js",
     "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "dependencies": {
