--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0"
   },
-  "proxy": "https://teddys-mern-todo.herokuapp.com/",
+  "proxy": "http://localhost:3001/",
   "scripts": {
     "start": "sass --watch src/styles/scss:src/styles/css | react-scripts start",
     "build": "react-scripts build",
